--- a/style.css
+++ b/style.css
@@ -28,3 +28,18 @@ img {
   height: 400px;
   width: auto;
 }
+ 
+div {
+    text-align: center;
+}
+ 
+ul, ol{
+    display: inline-block;
+    width:600px;
+    text-align: left;
+}
+
+
+
+
+  
